# Anomalithic

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_NOTES.md  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSING.md  README.md  ROADMAP.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vitest.config.ts
.agents/skills/Anomalithic/: SKILL.md
.claude/: ecc-tools.json  identity.json  launch.json
.codex/: AGENTS.md
.github/workflows/: ci.yml  release.yml
apps/cli/: package.json
apps/cli/src/: env.ts  index.ts  render.ts
apps/desktop/: README.md  package.json
apps/desktop/scripts/: gen-icon.mjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/ui/: app.css  app2.css  index.html  part1.js  part2.js
apps/web/: next.config.mjs  package.json  postcss.config.mjs  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: AdTerminal.tsx  Footer.tsx  Logo.tsx  Nav.tsx  ParticleField.tsx  Reveal.tsx  graphics.tsx  overlay.tsx  trace.tsx
apps/web/lib/: useSwarm.ts
docs/: desktop.md
docs/security/: threat-model-ads.md
docs/specs/: memory-format.md  thinking-impressions.md
scripts/: screenshot.mjs
services/ads-api/: package.json
services/ads-api/src/: index.ts  ledger.ts  server.ts
services/ads-api/test/: ledger.test.ts
services/ads-db/: README.md
skills/: README.md
skills/loop-engineering/: SKILL.md
(+13 files in other folders)
